# Testing

./: +  .gitignore  Cargo.toml  Expresiones.txt  ast.css  ast.html  ast.js  build_web  controls.js  controls.js.backup  index.html  index.js  index.ts  log  main.js  menu.css  menu.js  package-lock.json  package.json  result_sample.txt  sample.txt  script.sh  style.css  style2.css  tsconfig.json
blog/: index.html
pkg/: README.md  automata.d.ts  automata.js  automata_bg.wasm  automata_bg.wasm.d.ts  package.json
src/: build.rs  lib.rs  main.rs  nfa.rs
src/Backend/: automata.rs  build.rs  dfa.rs  gnfa.rs  intermediate_automata.rs  intervals.rs  mod.rs  nfa.rs  nfa_to_regex.rs  transformer.rs
src/Frontend/: error.rs  mod.rs  parser.rs  parser_recursivo.rs  tokens.rs
tests/: automata_regex.rs  generic_alphabet.rs  mini_grep.rs  parsing_tests.rs
visualization/: elementos_graficos.js  elementos_graficos.ts  elementos_logicos.ts  index.js  index.ts  new_nfa.js  new_nfa.ts  nfa.js  nfa.ts
visualization/js/: elementos_graficos.js  elementos_logicos.js  index.js
visualization_/: elementos_graficos.ts
wasi/: elixir.livemd  main.py  pyproject.toml
wasi/C#/: C#.csproj  Program.cs
web_frontend/: App.js  index.html  style.css
web_frontend/pkg/: automata_bg.wasm  automata_bg.wasm.d.ts
web_frontend/visualization/: elementos_logicos.js  index.css  index.js  index.ts
