[package]
name = "automata"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.bench]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.192"
serde-wasm-bindgen = "0.6.1"
wasm-bindgen = "0.2.88"
