[tool.poetry]
name = "listing-files"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "listing_files"}]

[tool.poetry.dependencies]
python = "^3.11"
wasmtime = "^17.0.0"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
